// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Instrument details panel component gracefully handles InstrumentScientists without Users 1`] = `
<div>
  <WithStyles(ForwardRef(Tabs))
    aria-label="instruments.details.tabs_label"
    onChange={[Function]}
    value="details"
  >
    <WithStyles(ForwardRef(Tab))
      aria-controls="instrument-details-panel"
      id="instrument-details-tab"
      label="instruments.details.label"
      value="details"
    />
    <WithStyles(ForwardRef(Tab))
      aria-controls="instrument-users-panel"
      id="instrument-users-tab"
      label="instruments.details.instrument_scientists.label"
      value="users"
    />
  </WithStyles(ForwardRef(Tabs))>
  <div
    aria-labelledby="instrument-details-tab"
    hidden={false}
    id="instrument-details-panel"
    role="tabpanel"
  >
    <WithStyles(ForwardRef(Typography))
      variant="body2"
    >
      <b>
        instruments.details.name
        :
      </b>
       
      Test Instrument
    </WithStyles(ForwardRef(Typography))>
    <WithStyles(ForwardRef(Typography))
      variant="body2"
    >
      <b>
        instruments.details.description
        :
      </b>
       
      An instrument purely for testing
    </WithStyles(ForwardRef(Typography))>
    <WithStyles(ForwardRef(Typography))
      variant="body2"
    >
      <b>
        instruments.details.type
        :
      </b>
       
      testing
    </WithStyles(ForwardRef(Typography))>
    <WithStyles(ForwardRef(Typography))
      variant="body2"
    >
      <b>
        instruments.details.url
        :
      </b>
       
      <WithStyles(ForwardRef(Link))
        href="www.example.com"
      >
        www.example.com
      </WithStyles(ForwardRef(Link))>
    </WithStyles(ForwardRef(Typography))>
  </div>
  <div
    aria-labelledby="instrument-users-tab"
    hidden={true}
    id="instrument-users-panel"
    role="tabpanel"
  />
</div>
`;

exports[`Instrument details panel component renders correctly 1`] = `
<div>
  <WithStyles(ForwardRef(Tabs))
    aria-label="instruments.details.tabs_label"
    onChange={[Function]}
    value="details"
  >
    <WithStyles(ForwardRef(Tab))
      aria-controls="instrument-details-panel"
      id="instrument-details-tab"
      label="instruments.details.label"
      value="details"
    />
  </WithStyles(ForwardRef(Tabs))>
  <div
    aria-labelledby="instrument-details-tab"
    hidden={false}
    id="instrument-details-panel"
    role="tabpanel"
  >
    <WithStyles(ForwardRef(Typography))
      variant="body2"
    >
      <b>
        instruments.details.name
        :
      </b>
       
      Test Instrument
    </WithStyles(ForwardRef(Typography))>
    <WithStyles(ForwardRef(Typography))
      variant="body2"
    >
      <b>
        instruments.details.description
        :
      </b>
       
      An instrument purely for testing
    </WithStyles(ForwardRef(Typography))>
    <WithStyles(ForwardRef(Typography))
      variant="body2"
    >
      <b>
        instruments.details.type
        :
      </b>
       
      testing
    </WithStyles(ForwardRef(Typography))>
    <WithStyles(ForwardRef(Typography))
      variant="body2"
    >
      <b>
        instruments.details.url
        :
      </b>
       
      <WithStyles(ForwardRef(Link))
        href="www.example.com"
      >
        www.example.com
      </WithStyles(ForwardRef(Link))>
    </WithStyles(ForwardRef(Typography))>
  </div>
</div>
`;

exports[`Instrument details panel component renders users tab when present in the data 1`] = `
<div>
  <WithStyles(ForwardRef(Tabs))
    aria-label="instruments.details.tabs_label"
    onChange={[Function]}
    value="details"
  >
    <WithStyles(ForwardRef(Tab))
      aria-controls="instrument-details-panel"
      id="instrument-details-tab"
      label="instruments.details.label"
      value="details"
    />
    <WithStyles(ForwardRef(Tab))
      aria-controls="instrument-users-panel"
      id="instrument-users-tab"
      label="instruments.details.instrument_scientists.label"
      value="users"
    />
  </WithStyles(ForwardRef(Tabs))>
  <div
    aria-labelledby="instrument-details-tab"
    hidden={false}
    id="instrument-details-panel"
    role="tabpanel"
  >
    <WithStyles(ForwardRef(Typography))
      variant="body2"
    >
      <b>
        instruments.details.name
        :
      </b>
       
      Test Instrument
    </WithStyles(ForwardRef(Typography))>
    <WithStyles(ForwardRef(Typography))
      variant="body2"
    >
      <b>
        instruments.details.description
        :
      </b>
       
      An instrument purely for testing
    </WithStyles(ForwardRef(Typography))>
    <WithStyles(ForwardRef(Typography))
      variant="body2"
    >
      <b>
        instruments.details.type
        :
      </b>
       
      testing
    </WithStyles(ForwardRef(Typography))>
    <WithStyles(ForwardRef(Typography))
      variant="body2"
    >
      <b>
        instruments.details.url
        :
      </b>
       
      <WithStyles(ForwardRef(Link))
        href="www.example.com"
      >
        www.example.com
      </WithStyles(ForwardRef(Link))>
    </WithStyles(ForwardRef(Typography))>
  </div>
  <div
    aria-labelledby="instrument-users-tab"
    hidden={true}
    id="instrument-users-panel"
    role="tabpanel"
  >
    <WithStyles(ForwardRef(Typography))
      key="5"
      variant="body2"
    >
      <b>
        instruments.details.instrument_scientists.name
        :
      </b>
       
      Louise Davies
    </WithStyles(ForwardRef(Typography))>
    <WithStyles(ForwardRef(Typography))
      key="10"
      variant="body2"
    >
      <b>
        instruments.details.instrument_scientists.name
        :
      </b>
       
      Louise
    </WithStyles(ForwardRef(Typography))>
  </div>
</div>
`;
